--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,10 @@ development:
   encoding: utf8
   database: Mesafija
   pool: 5
+  socket: /Applications/MAMP/tmp/mysql/mysql.sock
   username: root
-  host: localhost
-  port: 3306
+  password: 
+  port: 8889
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
