--- a/config/database.yml
+++ b/config/database.yml
@@ -3,24 +3,24 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-# development:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: Mesafija
-#   pool: 5
-#   socket: /Applications/MAMP/tmp/mysql/mysql.sock
-#   username: root
-#   password: 
-#   port: 8889
-
 development:
   adapter: mysql2
   encoding: utf8
-  database: sqlmesafija
+  database: Mesafija
   pool: 5
-  username: sqlmesafija
-  password: MF760667
-  host: 134.0.9.170
+  socket: /tmp/mysql.sock
+  username: root
+  password: root
+  port: 3306
+
+# development:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: sqlmesafija
+#   pool: 5
+#   username: sqlmesafija
+#   password: MF760667
+#   host: 134.0.9.170
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
